--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "html-to-react": "^1.4.2",
     "http-status-codes": "^1.3.2",
     "jquery.easing": "^1.4.1",
+    "js-cookie": "^2.2.1",
     "jwt-decode": "^2.2.0",
     "locutus": "^2.0.11",
     "moment": "^2.24.0",
